# test-sg

./: CMakeLists.txt  README.md  version.txt
CMakeModules/: FindSimGear.cmake
scripts/d-and-c/: README.Boost.md  _selectMSVC.bat  _selectMSVC.x64.bat  _setupBoost.x64.bat  build-boost.x64.bat  build-me.bat  d-and-c.bat  d-and-c.x64.bat  make3rd.x64.bat  openal-build.bat  openal-build.x64.bat  updopenal.bat
src/: SGPath_test.cxx  parseCache.cxx  sg_dir_test.cxx  test-sg.cxx
